--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,15 @@
     "keywords": ["yii2", "monitoring", "statsd", "RUM"],
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "domnikl/statsd": "^2.2"
     },
     "autoload": {
         "psr-4": {
             "bazilio\\yii\\monitoring\\": ""
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.1"
     }
 }
